[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/TransformParameterPanel.gd" id="1_script"]

[node name="TransformParameterPanel" type="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
text = "Transform Parameters"
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 30)

[node name="ParameterInputs" type="Control" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="ContentContainer"]
layout_mode = 2
alignment = 1
custom_minimum_size = Vector2(0, 40)

[node name="CancelButton" type="Button" parent="ContentContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
custom_minimum_size = Vector2(80, 0)

[node name="ConfirmButton" type="Button" parent="ContentContainer/ButtonContainer"]
layout_mode = 2
text = "Confirm"
custom_minimum_size = Vector2(80, 0)
